Autokey Fix Part II

There are also some cases where the actual autokey setting was being
ignored. This is now fixed by actually respecting user's autokey
setting.

This should fix most issues (hopefully all issues) around autokey
regressions. Please reopen this bug or a new bug if these issues
return once more.

BUG:459723
(cherry picked from commit d4fa022e83a93fbc4d447f06a02c62d810534d44)